fixed top-bar icons and scrollbar when menu is active

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,6 @@
 .menu {
   height: 100vh;
-  background-color: #e5e6e8;
+  background-color: $c-menu-bg;
 
   font-family: $heading-text-font;
   font-weight: 700;
@@ -14,7 +14,7 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    background-color: #e5e5e5;
+    background-color: $c-menu-bg;
 
     @include onTablet {
       margin-bottom: 56px;
