--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -12,12 +12,21 @@
     color: #f8f8fa;
   }
 
-  :has(&__menu:target) {
-    overflow: hidden;
-  }
-
   &__body {
     min-width: 320px;
+  }
+
+  &:has(&__menu:target) .page__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+  }
+
+  :has(&__menu:target) {
+    ::-webkit-scrollbar {
+      background-color: #e5e6e8;
+    }
   }
 
   &__menu {
