--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -35,12 +35,14 @@
   }
 
   &__icon-wrapper {
+    position: relative;
     display: flex;
-    flex-direction: row-reverse;
-    gap: 8px;
     align-items: center;
 
     &__number {
+      position: absolute;
+      left: -150px;
+      width: max-content;
       color: $c-main-text;
       font-family: "Inter", sans-serif;
       font-size: 12px;
