--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -21,7 +21,7 @@
     column-gap: 24px;
   }
 
-  @include onDesktop() {
+  @include onDesktop {
     --columns: 12;
   }
 }
