--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -6,6 +6,7 @@ $icon-size-on-tablet: 32px;
 
 $c-main-text: #292929;
 $c-shadow: #7e7e83;
+$c-menu-bg: #e5e6e8;
 
 $main-text-font: "Space Mono", monospace;
 $heading-text-font: "Space Grotesk", sans-serif;
